--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>mr_nav2</name>
+  <name>tuw_nav2</name>
   <version>0.0.0</version>
   <description>nav2 launches for mobile robotics</description>
   <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
