--- a/tmux_hallway_stage.yml
+++ b/tmux_hallway_stage.yml
@@ -15,16 +15,16 @@ windows:
           - ros2 launch stage_ros2 stage.launch.py world:=hallway
         - robot description: 
           - printf '\033]2;%s\033\\' 'robot description'
-          #- sleep 5; ros2 launch tuw_gazebo_models robot_description.launch.py model_name:=robot0  robot:=pioneer3dx
+          - sleep 5; ros2 launch tuw_gazebo_models robot_description.launch.py model_name:=robot0  robot:=pioneer3dx
         - laser filter: 
           - printf '\033]2;%s\033\\' 'laser filter'
           - ros2 launch tuw_nav2 laser_filter.launch.py filter_yaml:=shadow_filter_stage.yaml use_sim_time:=true scan_src:=base_scan namespace:=robot_0
         - rviz: 
           - printf '\033]2;%s\033\\' 'rviz'
-          - # ros2 launch tuw_nav2 rviz_launch.py namespace:=robot_0 use_namespace:=true
+          - ros2 launch tuw_nav2 rviz_launch.py namespace:=robot_0 use_namespace:=true
         - localization: 
           - printf '\033]2;%s\033\\' 'localization'
-          - read -p "start nav2"; ros2 launch tuw_nav2 localization_launch.py use_sim_time:=true init_pose_yaml:=init_pose_cave.yaml use_environment:=cave use_robot:=pioneer3dx namespace:=robot_0
+          - read -p "start nav2"; ros2 launch tuw_nav2 localization_launch.py use_sim_time:=true init_pose_yaml:=init_pose_cave.yaml use_environment:=hallway use_robot:=pioneer3dx namespace:=robot_0
         - navigation: 
           - printf '\033]2;%s\033\\' 'navigation'
           #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py
