--- a/config/nav2/pioneer3dx/v1/bt_navigator.yaml
+++ b/config/nav2/pioneer3dx/v1/bt_navigator.yaml
@@ -1,9 +1,9 @@
-bt_navigator:
+/**/bt_navigator:
   ros__parameters:
     use_sim_time: True
     global_frame: map
     robot_base_frame: base_link
-    odom_topic: /odom
+    odom_topic: odom
     bt_loop_duration: 10
     default_server_timeout: 20
     # 'default_nav_through_poses_bt_xml' and 'default_nav_to_pose_bt_xml' are use defaults:
@@ -56,11 +56,11 @@ bt_navigator:
     - nav2_back_up_cancel_bt_node
     - nav2_drive_on_heading_cancel_bt_node
 
-bt_navigator_navigate_through_poses_rclcpp_node:
+/**/bt_navigator_navigate_through_poses_rclcpp_node:
   ros__parameters:
     use_sim_time: True
 
-bt_navigator_navigate_to_pose_rclcpp_node:
+/**/bt_navigator_navigate_to_pose_rclcpp_node:
   ros__parameters:
     use_sim_time: True
 
