--- a/config/nav2/pioneer3dx/v1/planner_server.yaml
+++ b/config/nav2/pioneer3dx/v1/planner_server.yaml
@@ -1,4 +1,4 @@
-planner_server:
+/**/planner_server:
   ros__parameters:
     use_sim_time: True
     expected_planner_frequency: 20.0
@@ -9,7 +9,7 @@ planner_server:
       use_astar: false
       allow_unknown: true
 
-local_costmap:
+/**/local_costmap:
   local_costmap:
     ros__parameters:
       use_sim_time: True
@@ -38,7 +38,7 @@ local_costmap:
         mark_threshold: 0
         observation_sources: scan
         scan:
-          topic: /scan
+          topic: scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -52,7 +52,7 @@ local_costmap:
         map_subscribe_transient_local: True
       always_send_full_costmap: True
 
-global_costmap:
+/**/global_costmap:
   global_costmap:
     ros__parameters:
       update_frequency: 1.0
@@ -69,7 +69,7 @@ global_costmap:
         enabled: True
         observation_sources: scan
         scan:
-          topic: /scan
+          topic: scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
