--- a/config/nav2/pioneer3dx/v1/planner_server_ns.yaml
+++ b/config/nav2/pioneer3dx/v1/planner_server_ns.yaml
@@ -38,7 +38,7 @@ local_costmap:
         mark_threshold: 0
         observation_sources: scan
         scan:
-          topic: scan
+          topic: /robot_0/scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -69,7 +69,7 @@ global_costmap:
         enabled: True
         observation_sources: scan
         scan:
-          topic: scan
+          topic: /robot_0/scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
