--- a/tmux_cave_stage_ns.yml
+++ b/tmux_cave_stage_ns.yml
@@ -14,19 +14,19 @@ windows:
           - ros2 launch stage_ros2 stage.launch.py world:=cave enforce_prefixes:=true one_tf_tree:=false
         - laser filter: 
           - printf '\033]2;%s\033\\' 'laser filter'
-          - ros2 launch tuw_nav2 laser_filter.launch.py filter_yaml:=shadow_filter_stage.yaml namespace:=robot_0 scan_src:=base_scan scan_des:=scan use_sim_time:=true
+          - ros2 launch tuw_nav2 laser_filter.launch.py use_sim_time:=true filter_yaml:=shadow_filter_stage.yaml namespace:=robot_0 scan_src:=base_scan scan_des:=scan
         - rviz: 
           - printf '\033]2;%s\033\\' 'rviz'
-          - ros2 launch tuw_nav2 rviz_ns_launch.py namespace:=robot_0 config:=nav2_ns
+          - ros2 launch tuw_nav2 rviz_launch.py use_sim_time:=true namespace:=robot_0 config:=nav2
         - map: 
           - printf '\033]2;%s\033\\' 'map'
-          - ros2 launch tuw_nav2 map_server_launch.py environment:=cave namespace:=robot_0
+          - ros2 launch tuw_nav2 map_server_launch.py use_sim_time:=true environment:=cave namespace:=robot_0
         - localization: 
           - printf '\033]2;%s\033\\' 'localization'
-          - ros2 launch tuw_nav2 localization_ns_launch.py use_sim_time:=true namespace:=robot_0 init_pose_yaml:=init_pose_cave.yaml use_robot:=pioneer3dx
+          - ros2 launch tuw_nav2 localization_launch.py use_sim_time:=true namespace:=robot_0 init_pose_yaml:=init_pose_cave_robot_0.yaml vehilce:=pioneer3dx
         - navigation: 
           - printf '\033]2;%s\033\\' 'navigation'
-          - read -p "start nav2"; ros2 launch tuw_nav2 nav2_minimal_ns_launch.py use_sim_time:=true namespace:=robot_0
+          - ros2 launch tuw_nav2 nav2_minimal_launch.py use_sim_time:=true namespace:=robot_0
           #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py controller_server_yaml:=nav2_params.yaml  bt_navigator_yaml:=nav2_params.yaml smoother_server_yaml:=nav2_params.yaml behavior_server_yaml:=nav2_params.yaml waypoint_follower_yaml:=nav2_params.yaml planner_server_yaml:=nav2_params.yaml velocity_smoother_yaml:=nav2_params.yaml
           #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py controller_server_yaml:=controller_server_purepursuite.yaml
           #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_minimal_launch.py controller_server_yaml:=controller_server_mppi.yaml
