--- a/tmux/cave_stage_ns.yml
+++ b/tmux/cave_stage_ns.yml
@@ -14,7 +14,7 @@ windows:
           - ros2 launch stage_ros2 stage.launch.py world:=cave enforce_prefixes:=true one_tf_tree:=false
         - laser filter: 
           - printf '\033]2;%s\033\\' 'laser filter'
-          - ros2 launch tuw_nav2 laser_filter.launch.py use_sim_time:=true filter_yaml:=shadow_filter_stage.yaml namespace:=robot_0 scan_src:=base_scan scan_des:=scan
+          - ros2 launch tuw_nav2 laser_filter_launch.py use_sim_time:=true filter_yaml:=shadow_filter_stage.yaml namespace:=robot_0 scan_src:=base_scan scan_des:=scan
         - rviz: 
           - printf '\033]2;%s\033\\' 'rviz'
           - ros2 launch tuw_nav2 rviz_launch.py use_sim_time:=true namespace:=robot_0 config:=nav2
