--- a/tmux/cave_gazebo.yml
+++ b/tmux/cave_gazebo.yml
@@ -8,7 +8,7 @@ name: pioneer3dx
 
 windows:
   - simulation:
-      layout: d94d,158x35,0,0[158x17,0,0[158x8,0,0{39x8,0,0,0,39x8,40,0,9,39x8,80,0,7,38x8,120,0,10},158x8,0,9,5],158x17,0,18,3]
+      layout: 4fcc,144x33,0,0[144x16,0,0[144x7,0,0{35x7,0,0,0,35x7,36,0,1,36x7,72,0,2,35x7,109,0,3},144x3,0,8,4,144x4,0,12,6],144x16,0,17,5]
       panes: 
         - gazebo: 
           - printf '\033]2;%s\033\\' 'gazebo'
@@ -22,12 +22,16 @@ windows:
         - rviz: 
           - printf '\033]2;%s\033\\' 'rviz'
           - ros2 launch tuw_nav2 rviz_launch.py
+        - map: 
+          - printf '\033]2;%s\033\\' 'map'
+          - ros2 launch tuw_nav2 map_server_launch.py use_sim_time:=true environment:=cave
         - localization: 
           - printf '\033]2;%s\033\\' 'localization'
           - ros2 launch tuw_nav2 localization_launch.py use_sim_time:=true init_pose_yaml:=init_pose_cave.yaml use_environment:=cave use_robot:=pioneer3dx
         - navigation: 
           - printf '\033]2;%s\033\\' 'navigation'
-          - read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py
+          - read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py controller_server_yaml:=controller_server_purepursuite.yaml
+          #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py
           #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py controller_server_yaml:=nav2_params.yaml  bt_navigator_yaml:=nav2_params.yaml smoother_server_yaml:=nav2_params.yaml behavior_server_yaml:=nav2_params.yaml waypoint_follower_yaml:=nav2_params.yaml planner_server_yaml:=nav2_params.yaml velocity_smoother_yaml:=nav2_params.yaml
           #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_default_launch.py controller_server_yaml:=controller_server_purepursuite.yaml
           #- read -p "start nav2"; ros2 launch tuw_nav2 nav2_minimal_launch.py controller_server_yaml:=controller_server_mppi.yaml
