multi robot navigation

--- a/config/nav2/pioneer3dx/v2/bt_navigator.yaml
+++ b/config/nav2/pioneer3dx/v2/bt_navigator.yaml
@@ -1,7 +1,7 @@
 <robot_namespace>/bt_navigator:
   ros__parameters:
     use_sim_time: True
-    global_frame: map
+    global_frame: <robot_namespace>/map
     robot_base_frame: <robot_namespace>/base_link
     odom_topic: odom
     bt_loop_duration: 10
