--- a/config/nav2/pioneer3dx/v3/behavior_server.yaml
+++ b/config/nav2/pioneer3dx/v3/behavior_server.yaml
@@ -13,8 +13,8 @@
       plugin: "nav2_behaviors/DriveOnHeading"
     wait:
       plugin: "nav2_behaviors/Wait"
-    global_frame: <robot_namespace>/odom
-    robot_base_frame: <robot_namespace>/base_link
+    global_frame: odom
+    robot_base_frame: base_link
     transform_tolerance: 0.1
     simulate_ahead_time: 2.0
     max_rotational_vel: 1.0
