--- a/config/nav2/pioneer3dx/v2/planner_server.yaml
+++ b/config/nav2/pioneer3dx/v2/planner_server.yaml
@@ -14,7 +14,7 @@
     ros__parameters:
       update_frequency: 1.0
       publish_frequency: 1.0
-      global_frame: map
+      global_frame: <robot_namespace>/map
       robot_base_frame: <robot_namespace>/base_link
       use_sim_time: True
       robot_radius: 0.22
@@ -43,4 +43,4 @@
         cost_scaling_factor: 3.0
         inflation_radius: 0.55
       always_send_full_costmap: True
-      map_topic: "/map"
+      map_topic: "/<robot_namespace>/map"
