--- a/config/nav2/pioneer3dx/v3/bt_navigator.yaml
+++ b/config/nav2/pioneer3dx/v3/bt_navigator.yaml
@@ -2,7 +2,7 @@
   ros__parameters:
     use_sim_time: True
     global_frame: map
-    robot_base_frame: <robot_namespace>/base_link
+    robot_base_frame: base_link
     odom_topic: odom
     bt_loop_duration: 10
     default_server_timeout: 20
