--- a/config/nav2/pioneer3dx/v3/planner_server.yaml
+++ b/config/nav2/pioneer3dx/v3/planner_server.yaml
@@ -15,7 +15,7 @@
       update_frequency: 1.0
       publish_frequency: 1.0
       global_frame: map
-      robot_base_frame: <robot_namespace>/base_link
+      robot_base_frame: base_link
       use_sim_time: True
       robot_radius: 0.22
       resolution: 0.05
