--- a/config/nav2/pioneer3dx/v1/controller_server_mppi.yaml
+++ b/config/nav2/pioneer3dx/v1/controller_server_mppi.yaml
@@ -20,7 +20,7 @@ controller_server:
       temperature: 0.3
       gamma: 0.015
       motion_model: "DiffDrive"
-      visualize: false
+      visualize: True
       reset_period: 1.0 # (only in Humble)
       TrajectoryVisualizer:
         trajectory_step: 5
